# esp32-robot

./: CMakeLists.txt  partitions.csv  sdkconfig
components/audio/: CMakeLists.txt  audio_codec.cc  audio_codec.h  audio_manager.cpp  audio_manager.h  audio_service.cc  settings.cc
components/audio/boards/: board.cc  board.h  my_board.cc  my_board.h
components/audio/codecs/: my_audio_codec.cc  my_audio_codec.h  settings.h
components/button_driver/: CMakeLists.txt
components/button_driver/include/: button_driver.h
components/button_driver/src/: button_driver.c
components/cam_driver/: CMakeLists.txt
components/cam_driver/include/: cam_config.h  cam_driver.h
components/cam_driver/src/: cam_driver.c
components/dis_driver/: CMakeLists.txt
components/dis_driver/include/: dis_config.h  dis_driver.h
components/dis_driver/src/: dis_driver.c
components/flash_driver/: CMakeLists.txt
components/flash_driver/include/: flash_driver.h
components/flash_driver/src/: flash_driver.c
components/freertos/FreeRTOS-Kernel-SMP/include/freertos/: task.h
components/freertos/FreeRTOS-Kernel/include/freertos/: task.h
components/fs_driver/: CMakeLists.txt
components/fs_driver/include/: fs_driver.h
components/fs_driver/src/: fs_driver.c
components/mico_driver/: CMakeLists.txt
components/mico_driver/include/: mico_config.h  mico_driver.h
components/mico_driver/src/: mico_driver.c
components/protocols/: CMakeLists.txt  protocol_manager.c  protocol_manager.h  settings.cc  settings.h
main/: CMakeLists.txt  idf_component.yml
main/include/: common_type.h  config.h
main/include/emotion/: emotion_system.h  eye_tracking.h
main/include/task/: button_task.h  camera_task.h  display_task.h  face_detect_task.h  face_recognition_task.h  mico_task.h  state_manager.h  task_controller.h  voice_chat_task.h  voice_wake_task.h
main/include/utils/: board_wrapper.h  frame_queue.h  system_init.h  voice_chat_client.h  wifi_sta.h
main/src/: main.c
main/src/emotion/: emotion_system.c  eye_tracking.c
main/src/task/: button_task.c  camera_task.c  display_task.c  face_detect_task.cpp  face_recognition_task.cpp  mico_task.cpp  state_manager.c  task_controller.c  voice_chat_task.c  voice_wake_task.c
main/src/utils/: audio_init.c  board_wrapper.cpp  frame_queue.c  system_init.c  voice_chat_client.c  wifi_sta.c
